# RsFluid

./: .editorconfig  .flake8  .gitattributes  .gitignore  Cargo.toml  Makefile.toml  README.md  create-profile.sh  create-video.sh  flake.nix  justfile  profile.sh  pyproject.toml  rust-toolchain.toml
benches/: benchmarks.rs
benchmark/: rust-unmangle
frames/: create-video.sh
src/: lib.rs  main.rs  sim.html
src/draw/: mod.rs  plot.rs  tests.rs
src/log/: mod.rs
src/math/: common.rs  tests.rs
src/plotting/: mod.rs  plot.rs  tests.rs
src/scene/: cell.rs  cell_stats.rs  grid.rs  grid_stencil.rs  grid_stencil_unsafe.rs  mod.rs  setup.rs  tests.rs  timestepper.rs  visualization.rs
src/solver/: grid.rs  mod.rs  tests.rs  timestepper.rs
src/timestepper/: mod.rs
src/types/: algebra.rs  common.rs  frontback.rs  mod.rs
tests/compile-fail/: stencil-lifetime.rs
tools/: create-profile.sh  create-video.sh
