[package]
name = "rustofluid"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
slog = { version = "2.5.2", features = ["max_level_trace", "release_max_level_warn"] }
slog-term = "2.9.0"
slog-async = "2.7.0"
nalgebra = "0.31.4"
num-traits = "0.2.15"
float-cmp = "0.9.0"
clap = { version = "4.0.32", features = ["derive"] }
plotters = "0.3.4"
