[package]
name = "rustofluid"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
slog = { version = "2.5.2", features = ["max_level_trace", "release_max_level_info"] }
slog-term = "2.9.0"
slog-async = "2.7.0"
nalgebra = "0.31.4"
num-traits = "0.2.15"
float-cmp = "0.9.0"
clap = { version = "4.0.32", features = ["derive"] }
plotters = "0.3.4"
colorgrad = "0.6.2"
itertools = "0.10.5"
simple-error = "0.1.9"
rayon = "1.6.1"

[profile.release-bench]
inherits = "release"
opt-level = 3
overflow-checks = false
debug = 2
