[package]
name = "rsfluid"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
slog = { version = "2.7.0", features = ["max_level_trace", "release_max_level_info"] }
slog-term = "2.9.1"
slog-async = "2.8.0"
nalgebra = "0.32.4"
num-traits = "0.2.18"
float-cmp = "0.9.0"
clap = { version = "4.5.3", features = ["derive"] }
plotters = "0.3.5"
colorgrad = "0.6.2"
itertools = "0.12.1"
simple-error = "0.3.0"
rayon = "1.9.0"
indicatif = "0.17.8"
derive_builder = "0.20.0"


[dev-dependencies]
criterion = "0.5"
compiletest_rs = "0.10"

[[bench]]
name = "benchmarks"
harness = false


[profile.release-bench]
inherits = "release"
opt-level = 3
overflow-checks = false
debug = 2
